--- a/jupiter_assignment.ipynb
+++ b/jupiter_assignment.ipynb
@@ -1389,9 +1389,7 @@
         "    for rec in recommendations:\n",
         "        print(rec)\n",
         "\n",
-        "    print(f\"\\n Business insights analysis completed successfully!\")\n",
-        "    print(f\"Key outputs ready for President's Office strategic review\")\n",
-        "\n"
+        "    print(f\"\\n Business insights analysis completed successfully!\")\n"
       ]
     },
     {
@@ -1405,7 +1403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2418,7 +2416,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2522,9 +2520,7 @@
         "            df_engineered = df\n",
         "\n",
         "# Business insights analysis\n",
-        "business_insights_analysis(best_model, feature_importance_df, df_engineered)\n",
-        "\n",
-        "print(\"Business insights analysis completed!\")"
+        "business_insights_analysis(best_model, feature_importance_df, df_engineered)"
       ]
     }
   ],
